--- a/infrastructure/udagram-network.yaml
+++ b/infrastructure/udagram-network.yaml
@@ -34,7 +34,7 @@ Parameters:
     Type: String
     Default: 10.0.3.0/24
 
-################################ Resources ################################
+############################### Resources #################################
 Resources:
   VPC:
     Type: AWS::EC2::VPC
