fix udagram-server02.yaml typos, make CloudFrontDistribution to work correctly

--- a/infrastructure/udagram-s3.yaml
+++ b/infrastructure/udagram-s3.yaml
@@ -125,7 +125,7 @@ Outputs:
     Value: !Join ['', ['https://', !GetAtt [S3KeyPar, DomainName]]]
     Description: Secure URL for key hosted on S3
   S3Logs:
-    Value: !GetAtt [S3Logs, WebsiteURL]
+    Value: !GetAtt [S3Logs, DomainName]
     Description: URL for logs hosted on S3
     Export:
       Name: !Sub ${EnvironmentName}-S3-LOGS
